--- a/TwitdolfProject/res/values/strings.xml
+++ b/TwitdolfProject/res/values/strings.xml
@@ -3,8 +3,8 @@
 
     <string name="app_name">Twitdolf</string>
     <string name="action_settings">Settings</string>
-    <string name="title_section1">YOLO</string>
-    <string name="title_section2">Info</string>
-    <string name="title_section3">Timeline</string>
+    <string name="title_section1">Home</string>
+    <string name="title_section2">Search</string>
+    <string name="title_section3">Profile</string>
 
 </resources>
